# playground--mcp-model_context_protocol

./: .env.example  .gitignore  README.md  main.py  milestones-frontend.md  milestones.md  next_actions.md  next_actions_frontend.md  pyproject.toml  requirements.txt
.plandex-v2/: projects-v2.json
app_a/: app.py  llm_client.py  mcp_handler.py
app_b/: app.py  llm_client.py  mcp_handler.py
descriptions/: proposal-plandex.md  sketch-yek_output.txt  sketch.md
descriptions/milestones/: milestone_1_mcp_server_setup.md  milestone_2_app_a_setup.md  milestone_3_app_b_setup.md  milestone_4_mcp_flow.md  milestone_5_readme_instructions.md  milestone_6_future_expansions.md  milestones-docker.md
frontend/: .env.example  .env.local  README.md  TEST_INSTRUCTIONS.md  TEST_LOG_FEATURES.md  TEST_RESULTS.md  analyze-logs.js  dev.sh  globals.css  init.sh  logging.js  next.config.js  package-lock.json  package.json  restart.sh  run-tests.sh  setup.sh  shutdown.sh  simulate-activity.js  start-testing.sh  tailwind.config.js  test-connection.js  test-server.js  test.sh
frontend/.next/: trace
frontend/.next/server/: _error.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  (+1 more)
frontend/public/: manifest.json
mcp_server/: app.py  router.py
scripts/: test_flow.py
src/: config.py  main.py
src/app_a/: app.py  llm_client.py  mcp_handler.py
src/app_b/: app.py  mcp_handler.py
src/app_c/: __init__.py  app.py  mcp_handler.py
src/mcp_server/: app.py  router.py  ws_adapter.py
tests/: README.md  conftest.py  test_integration.py
tests/test_app_a/: test_app_a.py
tests/test_app_b/: test_app_b.py
tests/test_app_c/: __init__.py  test_app_c.py
tests/test_mcp_server/: test_mcp_server.py
(+49 files in other folders)
