[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-project"
version = "0.1.0"
description = "MCP Communication Project using Fast MCP principles"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "python-dotenv",
    "httpx",
    "pydantic",
]

[tool.uv]
python = "3.8"
